[gd_scene load_steps=5 format=3 uid="uid://bh1ic0el6jv4c"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemy/BasicEnemy.gd" id="1_34a26"]
[ext_resource type="Texture2D" uid="uid://cyq332mat6op0" path="res://Assets/Characters/enemy.png" id="2_ouh4q"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemy/Area2D.gd" id="3_yrvmv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jup6i"]
radius = 63.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0174533
script = ExtResource("1_34a26")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 98
texture_filter = 1
scale = Vector2(4.5, 4.5)
texture = ExtResource("2_ouh4q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jup6i")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 30.0
path_postprocessing = 1
radius = 248.56
max_neighbors = 3
avoidance_layers = 2
avoidance_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="LOS check" type="RayCast2D" parent="."]
collision_mask = 129
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_yrvmv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jup6i")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.14441e-05, 2.09808e-05)
scale = Vector2(19.2, 19.2)

[node name="WeaponSprite" type="Sprite2D" parent="."]
z_index = 1000
scale = Vector2(5, 5)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
